force-app/main/default/objects/DHS_Docusign_Templates__c/fields/DocusignEmailMessage__c.field-meta.xml
<CustomField>
    <fullName>DocusignEmailMessage__c</fullName>
    <label>DocusignEmailMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>