force-app/main/default/objects/DHS_Docusign_Templates__c/fields/DocusignEmailSubject__c.field-meta.xml
<CustomField>
    <fullName>DocusignEmailSubject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DocusignEmailSubject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>