force-app/main/default/objects/DHS_Docusign_Templates__c/fields/DocusignExpireWarn__c.field-meta.xml
<CustomField>
    <fullName>DocusignExpireWarn__c</fullName>
    <label>DocusignExpireWarn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>