force-app/main/default/objects/DHS_Docusign_Templates__c/fields/DocusignReminderDelay__c.field-meta.xml
<CustomField>
    <fullName>DocusignReminderDelay__c</fullName>
    <label>DocusignReminderDelay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>