force-app/main/default/objects/DHS_Docusign_Templates__c/fields/DocusignReminderEnabled__c.field-meta.xml
<CustomField>
    <fullName>DocusignReminderEnabled__c</fullName>
    <label>DocusignReminderEnabled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>