force-app/main/default/objects/DHS_Docusign_Templates__c/fields/DocusignReminderFrequency__c.field-meta.xml
<CustomField>
    <fullName>DocusignReminderFrequency__c</fullName>
    <label>DocusignReminderFrequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>