force-app/main/default/objects/DHS_Docusign_Templates__c/fields/Number_of_Signers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Signers__c</fullName>
    <label>Number of Signers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>